# ConRAG

./: .dockerignore  .env.example  .gitignore  DOCKER_COMMANDS.md  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  populate_fanout.py  pyproject.toml
datasets/example/: corpus.json  questions.json
datasets/fanoutqa_first20/: metadata.json  questions.json
docker/: compose-entrypoint.sh
outputs/example/: chunk_corpus.pkl  chunk_map.pkl  chunks.faiss  knowledge_graph.pkl  node_map.pkl  nodes.faiss  relation_map.pkl  relations.faiss
outputs/fanoutqa_first20/: chunk_map.pkl  chunks.faiss  node_map.pkl  relation_map.pkl
results/example/2026-06-03_13-37-03_355097/: evaluation_report.json  results.json
results/fanoutqa_first20/2026-06-03_19-26-59_446887/: evaluation_report.json  results.json
src/conrag/: __init__.py  clients.py  common.py  config.py  debug_web.py  evaluation.py  fanout_dataset.py  graph.py  pipeline.py  planning.py  retrieval.py  vector_store.py
src/conrag/prompts/: __init__.py  prompt_templates.py  schema.json
tests/: test_clients.py  test_config.py  test_debug_web.py  test_fanout_dataset.py  test_retrieval_trace.py
